WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38115
animateTransform does not work on gradientTransform
https://bugs.webkit.org/show_bug.cgi?id=38115
Summary
animateTransform does not work on gradientTransform
marek
Reported
2010-04-26 04:42:13 PDT
Created
attachment 54277
[details]
testcase animateTransform element is supposed to work with different transform attributes. In majority cases it is just attributeName="gradient" and it works fine, however it should work also with attributeName="gradientTransform" but it is not Steps to Reproduce: 1. create some gradient 2. add animateTransform element with attributeName="gradientTransform", rotate for example... 3. apply animateTransform to gradient Actual Results: animation won't start Expected Results: animation should be working
Attachments
testcase
(597 bytes, image/svg+xml)
2010-04-26 04:42 PDT
,
marek
no flags
Details
Proposed patch
(9.59 KB, patch)
2010-05-12 20:32 PDT
,
Robin Cao
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Cao
Comment 1
2010-05-12 20:32:45 PDT
Created
attachment 55932
[details]
Proposed patch
Eric Seidel (no email)
Comment 2
2010-05-20 01:13:39 PDT
Comment on
attachment 55932
[details]
Proposed patch Looks right as far as I can tell. Thank you for the patch!
WebKit Commit Bot
Comment 3
2010-05-21 05:53:15 PDT
Comment on
attachment 55932
[details]
Proposed patch Clearing flags on attachment: 55932 Committed
r59928
: <
http://trac.webkit.org/changeset/59928
>
WebKit Commit Bot
Comment 4
2010-05-21 05:53:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug