2010-05-21  Robin Cao  <robin.cao@torchmobile.com.cn>

Reviewed by Eric Seidel.

        animateTransform does not work on gradientTransform
        https://bugs.webkit.org/show_bug.cgi?id=38115

        Tests if gradientTransform of a gradient is animateable.

        * svg/animations/animate-gradient-transform-expected.txt: Added.
        * svg/animations/animate-gradient-transform.html: Added.
        * svg/animations/script-tests/animate-gradient-transform.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):
2010-05-21  Robin Cao  <robin.cao@torchmobile.com.cn>

        Reviewed by Eric Seidel.

        animateTransform does not work on gradientTransform
        https://bugs.webkit.org/show_bug.cgi?id=38115

        Tests: svg/animations/animate-gradient-transform.html

        * svg/SVGAnimateTransformElement.cpp:
        (WebCore::SVGAnimateTransformElement::hasValidTarget): Check if the target element is gradient.
        (WebCore::transformListFor): Ditto.
        (WebCore::SVGAnimateTransformElement::resetToBaseValue): Ditto.
        (WebCore::SVGAnimateTransformElement::applyResultsToTarget): Ditto.

Canonical link: https://commits.webkit.org/51021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59928 268f45cc-cd09-0410-ab3c-d52691b4dbfc